<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridlayoutActivity"
    android:rowCount="2"
    android:columnCount="2">

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:text="@string/btn_foo_1" />

    <GridLayout
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="2">

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_useless_1" />

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_useless_2" />

    </GridLayout>

    <Button
        android:id="@+id/button19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_foo_2" />

</GridLayout>